<resources>
    <string name="app_name">Attendance</string>
    <string name="attendance_app_for_rvce_placements">Examination Seat Allocator</string>
    <string name="usn">Enter Your USN</string>
    <string name="administrator_login">Administrator Login</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="admin_id">Admin ID</string>
    <string name="app_logo">App Logo</string>
    <string name="login_admin">Login</string>
    <string name="title_activity_landing_screen">Your Seats</string>
    <string name="drawer_open">Menu opened</string>
    <string name="drawer_close">Menu closed</string>
    <string name="action_settings">Settings</string>
    <string name="refresh">Refresh</string>
</resources>
